// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Figure > スナップショット NoCaption 1`] = `
<body>
  <div>
    <figure
      class="figure_figureStyle__15dclgi0"
    >
      <img
        alt=""
        src="https://placehold.jp/3063D4/ffffff/150x200.png"
      />
    </figure>
  </div>
</body>
`;

exports[`Figure > スナップショット Sample 1`] = `
<body>
  <div>
    <figure
      class="figure_figureStyle__15dclgi0"
    >
      <img
        alt=""
        src="https://placehold.jp/3063D4/ffffff/400x300.png"
      />
      <figcaption
        class="figure_figureCaptionStyle__15dclgi1"
      >
        sample caption
      </figcaption>
    </figure>
  </div>
</body>
`;
